# som-cottonwood-leaf-cooling

./: .gitignore  .gitmodules  README.md  bayesian_optim.ipynb  compare-model-to-ground-all-pop.ipynb  compare-model-to-ground.ipynb  dataset.csv  param_data_template.csv  reserve_garisom.sh  sa.py  sync_from_box.sh  sync_to_box.sh  weather_hourly_transforms.ipynb
DBG-constant-solar/: configuration.csv  dataset.csv  parameters.csv
DBG-full-irrigation/: configuration.csv  dataset.csv
DBG-ground-leaftemp/: configuration.csv  jla_dataset.csv  nrv_dataset.csv  tsz_dataset.csv
DBG-leaf/: configuration.csv  parameters.csv  seasonlimits.csv
bash/: reserve_garisom.sh  sq.sh  sync_from_box.sh  sync_to_box.sh
data/: 230926_DBG cottonwood weather_Data15.csv  230926_DBG_cottonwood_weather_clean.csv  Cottonwood_2023_Gsw_measurement times.xlsx  air-temp_comparison.ipynb  build_ground_truth.ipynb  ccr_hourly_data.csv  ccr_leaftemp.csv  ccr_std_error.csv  dbg_cottonwood_plant trait summary_03.csv  dbg_cottonwood_plant trait summary_03.xlsx  dbg_cottonwood_plant trait summary_04.xlsx  dbg_cottonwood_waterpotential.csv  hourly-trait-summary_transform.ipynb  jla_hourly_data.csv  jla_leaftemp.csv  jla_std_error.csv  leaftemp-data_transform.ipynb  nrv_hourly_data.csv  nrv_leaftemp.csv  nrv_std_error.csv  pm.leaf.thermistor.data.airtemp.cleaned.csv  porometer.all.days.csv  soil_model_params.xlsx  tsz_hourly_data.csv  tsz_leaftemp.csv  (+5 more)
optimization/garisom_opt/: README.md  pyproject.toml
optimization/garisom_opt/garisom_opt/: __init__.py  config.py  metric.py  model.py  optimizer.py
(+233 files in other folders)
