[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garisom-opt"
version = "0.1"
description = "Parameter optimization tools for GARISOM model."
authors = [
    { name = "Colin Pannikkat", email = "pannikkc@oregonstate.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "ray[tune]"
]

[project.urls]
homepage = "https://github.com/yourusername/garisom_opt"
repository = "https://github.com/yourusername/garisom_opt"
